<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/relativeLayout1"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">

	<Button
	    android:id="@+id/playGameButton"
	    android:layout_width="fill_parent"
	    android:layout_height="80dp"
	    android:layout_alignParentLeft="true"
	    android:layout_marginBottom="20dp"
	    android:layout_marginTop="80dp"
	    android:background="@drawable/button_shape"
	    android:text="@string/play_game"
	    android:textColor="#EAEAEA"
	    android:textSize="20dp" >
</Button>

	<Button
	    android:id="@+id/options_button"
	    android:layout_width="fill_parent"
	    android:layout_height="80dp"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/playGameButton"
	    android:background="@drawable/button_shape"
	    android:text="@string/titleOptions"
	    android:textColor="#EAEAEA"
	    android:textSize="20dp" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="16dp"
	    android:text="@string/app_name"
	    android:textAppearance="?android:attr/textAppearanceLarge" android:background="@drawable/my_border"/>

</RelativeLayout>
